Fix: Copy info pop over was a lower z-index than the collection, causing a confusing layered display
DD-2655

--- a/css/common.scss
+++ b/css/common.scss
@@ -33,7 +33,7 @@ div.dt-button-info {
 	border-radius: 0.75em;
 	box-shadow: 0 12px 30px rgba(0, 0, 0, 0.6);
 	text-align: center;
-	z-index: 21;
+	z-index: 2003;
 	overflow: hidden;
 
 	h2 {
